OpenJMLTest/test/valuetypesErr/expected
test/valuetypes/Arr.java:6: error: incompatible types: array<String> cannot be converted to array<Short>
//@ ghost array<Short> arx = args.array;
                                 ^
Operation not performed because of parse or type errors
1 error
